<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/last_location_text"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <TextView
            android:id="@+id/last_wifi_networks"
            android:layout_width="325dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="#000000"
            android:hint="@string/found_wifi_networks_hint"
            android:scrollbars="vertical"
            android:textColor="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <TextView
            android:id="@+id/last_bt_devices"
            android:layout_width="325dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="#040404"
            android:hint="@string/found_bt_devices_hint"
            android:scrollbars="vertical"
            android:textColor="#2196F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.748" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/main_button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_start"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/main_button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stop"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>